k8s/twitter/twitter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitter-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: twitter.local
      http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: user-api
                port:
                  number: 80
          - path: /api/v1/follow
            pathType: Prefix
            backend:
              service:
                name: user-api
                port:
                  number: 80
          - path: /api/v1/feed
            pathType: Prefix
            backend:
              service:
                name: feed-api
                port:
                  number: 80
          - path: /api/v1/posts
            pathType: Prefix
            backend:
              service:
                name: post-api
                port:
                  number: 80
